--- a/개인/허스트중앙 통합멤버십/허스트중앙main.css
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.css
@@ -43,7 +43,7 @@ header .head {
   position: relative;
 }
 header .head .headLogo {
-  background: darkolivegreen center/cover no-repeat;
+  background: url(images/logoblack.svg) center/cover no-repeat;
   width: 97px;
   height: 33px;
 }
@@ -118,7 +118,6 @@ main .whiteBg,
 main .brandPage {
   text-align: center;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -128,11 +127,27 @@ main .point {
 main .coupon {
   background: url(images/couponbg.png) center/cover no-repeat;
 }
-main .mainPage .txt {
-  position: absolute;
+main .cosmopolitan {
+  background: #ff1493;
+}
+main .bazzar {
+  background: #111;
+}
+main .esquire {
+  background: #969c98;
 }
 main .darkPage .txt {
   color: #fff;
+}
+main .video .txt {
+  color: #111;
+}
+main .memPage .txt,
+main .brandPage .txt {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 main .memPage .txt p:nth-child(1) {
   font-size: 28px;
@@ -141,10 +156,55 @@ main .memPage .txt p:nth-child(1) {
 main .memPage .txt p:nth-child(2) {
   font-size: 56px;
   font-weight: 700;
+  margin-top: 24px;
 }
 main .memPage .txt p:nth-child(3) {
   font-size: 18px;
   font-weight: 500;
+  margin-top: 40px;
+}
+main .whiteBg .txt p:nth-child(1) {
+  font-size: 80px;
+  font-weight: 700;
+}
+main .whiteBg .txt p:nth-child(2) {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 20px;
+  color: #666;
+}
+main .brandPage .txt p:nth-child(2) {
+  font-size: 28px;
+  font-weight: 600;
+  margin-top: 47px;
+  font-family: "Montserrat", sans-serif;
+}
+main .brandPage .txt p:nth-child(3) {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 24px;
+}
+main .elle .txt p:nth-child(3) {
+  color: #666;
+}
+main .memPage .txt .mainLink {
+  margin-top: 80px;
+}
+main .brandPage .txt .mainLink,
+main .appPage .txt .mainLink {
+  margin-top: 60px;
+}
+main .darkPage .txt .mainLink a {
+  color: #fff;
+  padding: 16px 24px;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  display: inline-block;
+}
+main .brightPage .txt .mainLink a {
+  color: #111;
+  padding: 16px 24px;
+  border: 1px solid rgba(17, 17, 17, 0.6);
+  display: inline-block;
 }
 main .mainPage .txt .mainLink a span {
   font-size: 16px;
@@ -152,12 +212,6 @@ main .mainPage .txt .mainLink a span {
   padding-right: 28px;
   box-sizing: border-box;
   position: relative;
-}
-main .darkPage .txt .mainLink a {
-  color: #fff;
-}
-main .brightPage .txt .mainLink a {
-  color: #111;
 }
 main .darkPage .txt .mainLink a span::after {
   content: "";
